<resources>
    <string name="app_name">Weather</string>
    <string name="city">City</string>
    <string name="area">Area</string>
    <string name="degrees">Degrees</string>
    <string name="show">Show</string>
    <string name="the_type_of_weather">The type of weather</string>
    <string name="wind">Wind</string>
    <string name="pressure">Pressure</string>
    <string name="humidity">Humidity</string>
    <string name="today">Today</string>
    <string name="next_day">nextDay</string>
    <string name="enter_name_of_the_city">Enter the name of the City</string>
    <string name="menu">Menu</string>
    <string name="settings">Settings</string>
    <string name="find">Find</string>
    <string name="enter_city_name">Enter the City name</string>
    <string name="top_cities">Top Cities</string>
    <string name="select_the_additional_parameters_you_are_interested_in">Select the additional parameters you are interested in</string>
    <string name="theme">Theme</string>
    <string name="light_theme">Light</string>
    <string name="dark_theme">Dark</string>
    <string name="temperature">Temperature</string>
    <string name="wind_force">Wind Force</string>
    <string name="m_s">m/s</string>
    <string name="km_h">km/h</string>
    <string name="mm_of_m_c">mm of m.c.</string>
    <string name="gPa">gPa</string>
    <string name="cels">С\u00B0</string>
    <string name="kelvin">K\u00B0</string>
    <string name="search">Search</string>
    <string name="error_message">Error</string>
    <string name="moscow">Moscow</string>
    <string name="spb">Saint Petersburg</string>
    <string name="kazan">Kazan</string>
    <string name="voronezh">Voronezh</string>
    <string name="sochi">Sochi</string>
    <string name="update_time">Update Time</string>
    <string name="weather_icon">Icon</string>
    <string name="error">Error. Couldn\'t get the weather data.</string>
    <string name="option_fragment_name">Settings</string>
    <string name="error_one">Sorry, saving the search query is currently unavailable.</string>
    <string name="time">Time</string>
    <string name="weekday">Day in a week</string>
    <string name="date">Date</string>
    <string name="night_mode">Night mode activated</string>
    <string name="day_mode">Day mode activated</string>
    <string name="chancel">Chancel</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="exit_settings">Finish setting up the parameters?</string>
    <string name="open_url">Open URL in browser?</string>
    <string name="feels">Feels like</string>
    <string name="update">Update</string>


    <string-array name="topCities">
        <item>Moscow</item>
        <item>Saint Petersburg</item>
        <item>Kazan</item>
        <item>Sochi</item>
        <item>Voronezh</item>
        <item>Velikii Novgorod</item>
        <item>Suzdal</item>
        <item>Ekaterinburg</item>
        <item>Vologda</item>
        <item>Cyctyvkar</item>
        <item>Samara</item>
        <item>Kaliningrad</item>
    </string-array>
    <string-array name="weekday">
        <item>Monday</item>
        <item>Tuesday</item>
        <item>Wednesday</item>
        <item>Thursday</item>
        <item>Friday</item>
        <item>Saturday</item>
        <item>Sunday</item>
    </string-array>

    <string-array name="hours_in_a_day">
        <item>00</item>
        <item>03</item>
        <item>06</item>
        <item>09</item>
        <item>12</item>
        <item>15</item>
        <item>18</item>
        <item>21</item>
    </string-array>

    <string name="fall">Fail connection</string>
    <string name="developers">Developers</string>
    <string name="dev_by">Developed by:</string>
    <string name="name">Varvara Agapova @agaperra</string>
    <string name="vk_app_id">agaperra</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="exit">Are you sure you want to close the app?</string>

    <string name="menu_home">Home</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_developers">Developers</string>
    <string name="message">Open URL in browser?</string>

    <!-->north west south east-->
    <string name="e">E</string>
    <string name="ne">NE</string>
    <string name="n">N</string>
    <string name="nw">NW</string>
    <string name="w">W</string>
    <string name="ws">SW</string>
    <string name="s">s</string>
    <string name="se">SE</string>


</resources>