<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SettingsActivity">

    <ScrollView
        android:id="@+id/fullScreenSettingsScrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:id="@+id/checkNewParametersView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/usually_margin"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.03">

                <TextView
                    android:id="@+id/checkNewParametersTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:text="@string/settings"
                    android:textSize="@dimen/text_size_big" />

                <com.google.android.material.switchmaterial.SwitchMaterial
                    android:id="@+id/themeSwitch"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/usually_margin"
                    android:checked="false"
                    android:text="@string/theme"
                    android:textOff="@string/light_theme"
                    android:textOn="@string/dark_theme"
                    android:textSize="@dimen/text_size_big"
                    android:theme="@style/MySwitch" />

                <!--хочу потом сделать квадратные переключатели с надписями-->
                <com.google.android.material.switchmaterial.SwitchMaterial
                    android:id="@+id/switchTemperature"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/usually_margin"
                    android:checked="false"
                    android:text="@string/temperature"
                    android:textOff="@string/cels"
                    android:textOn="@string/faringate"
                    android:textSize="@dimen/text_size_big"
                    android:theme="@style/MySwitch" />

                <com.google.android.material.switchmaterial.SwitchMaterial
                    android:id="@+id/switchWind"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/usually_margin"
                    android:checked="false"
                    android:text="@string/wind_force"
                    android:textOff="@string/m_s"
                    android:textOn="@string/km_h"
                    android:textSize="@dimen/text_size_big"
                    android:theme="@style/MySwitch" />

                <com.google.android.material.switchmaterial.SwitchMaterial
                    android:id="@+id/switchPressure"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/usually_margin"
                    android:checked="false"
                    android:text="@string/pressure"
                    android:textOff="@string/mm_of_m_c"
                    android:textOn="@string/gPa"
                    android:textSize="@dimen/text_size_big"
                    android:theme="@style/MySwitch" />

            </LinearLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>